# NPP_semester_project

./: HtmlExport.hs  LICENSE  Layout.hs  Main.hs  Parser.hs  Project_Documentation.docx  README.md  complex-minimal.html  layout.html  layout_complex.json  layout_example.json  layout_gallery.json  layout_with_images.json  project.cabal  style-blog.css  style-minimal.css  style-modern.css  style.css
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
